--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.170.0",
+    "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
+    "next": "^14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "three": "^0.170.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8",
+    "r3f-perf": "^7.2.3",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
